2006-08-02 Wade Berrier <wberrier@novell.com>

	* configure.in: Make sure CPPFLAGS get propogated

2006-08-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: make it work with the latest and greates apache 2.2.3
	and simplified.

2006-07-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: when using autoapplications, pass all the options that
	don't have an explicit alias to XXGLOBAL, which is the internal name
	used for the mod-mono-server instance that will create new applications
	on demand. Using XXGLOBAL as an identifier is forbidden now.

2006-07-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: allow setting MonoDebug when using automatic
	applications. Before this fix, no mod-mono-server would be started.
	Fixes bug #78672.

2006-04-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: reuse the memory allocated when mod-mono-server reads
	the request body. Patch by Dean Brettle.

2006-03-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]: the number of arguments for apr_socket_create
	depends on the apr version used when compiling. Fixes bug #77933.

2006-03-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.h: fix compilation for systems that do not have stdint.h.
	Patch by "CK Ng".

2006-03-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: more hackery for 1.3 and apr-config. Fixes bug #77928.
	Patch by jedynamic@bellsouth.net.

2006-03-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: add apxs -q CFLAGS. Fixes bug #77764.

2006-02-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: append --includes from apr-config to CFLAGS.

2006-01-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: actually write the result of IS_CONNECTED. Patch by
	Cyrille Colin.

2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in:
	* src/mod_mono.[ch]: now apache 2.2 is supported.
